redesigned spending analysis fragment

--- a/app/src/main/res/layout/fragment_spending_analysis.xml
+++ b/app/src/main/res/layout/fragment_spending_analysis.xml
@@ -13,121 +13,142 @@
         android:id="@+id/idTVHead"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/rounded_corner"
+        android:fontFamily="@font/open_sans_extrabold"
         android:gravity="center"
         android:padding="4dp"
         android:text="Expense Break Down"
         android:textAlignment="center"
-        android:textColor="@color/purple_200"
-        android:textSize="20sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/white"
         android:textStyle="bold" />
 
     <!--Ui component for our pie chart-->
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pieChart"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/idTVHead"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="106dp"
-        android:layout_below="@id/pieChart"
-        android:layout_marginTop="54dp"
-        android:orientation="horizontal"
-        android:weightSum="3">
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChart"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_below="@id/idTVHead"
+            android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:layout_width="0dp"
+        <TableLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/saffron"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Shopping"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+            android:layout_below="@id/pieChart"
+            android:layout_marginTop="30dp">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/teal_200"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Travel"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/green"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Misc/Other"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_circle"
+                    android:drawableTint="@color/saffron"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="Shopping"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_circle"
+                    android:drawableTint="@color/teal_200"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="Travel"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="143dp"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="14dp"
-        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_circle"
+                    android:drawableTint="@color/green"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="Misc/Other"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/purple_200"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Groceries"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+            </TableRow>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/yellow"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Transportation"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_circle"
-            android:drawableTint="@color/red"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="Entertainment"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_circle"
+                    android:drawableTint="@color/purple_200"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="Groceries"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_circle"
+                    android:drawableTint="@color/yellow"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="Transportation"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@drawable/ic_circle"
+                    android:drawableTint="@color/red"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="Entertainment"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
+            </TableRow>
+        </TableLayout>
     </LinearLayout>
 
 </RelativeLayout>
