--- a/app/src/main/res/layout/fragment_spending_analysis.xml
+++ b/app/src/main/res/layout/fragment_spending_analysis.xml
@@ -57,6 +57,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/cat_id_1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -66,11 +67,11 @@
                     android:fontFamily="@font/open_sans_extrabold"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="Shopping"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
 
                 <TextView
+                    android:id="@+id/cat_id_2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -80,21 +81,20 @@
                     android:fontFamily="@font/open_sans_extrabold"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="Travel"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
 
                 <TextView
+                    android:id="@+id/cat_id_3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/ic_circle"
-                    android:drawableTint="@color/green"
+                    android:drawableTint="@color/red"
                     android:fontFamily="@font/open_sans_extrabold"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="Misc/Other"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
 
@@ -105,6 +105,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/cat_id_4"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -114,11 +115,11 @@
                     android:fontFamily="@font/open_sans_extrabold"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="Groceries"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
 
                 <TextView
+                    android:id="@+id/cat_id_5"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -128,25 +129,22 @@
                     android:fontFamily="@font/open_sans_extrabold"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="Transportation"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="12sp" />
+                    android:textColor="@color/white" />
 
                 <TextView
+                    android:id="@+id/cat_id_6"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/ic_circle"
-                    android:drawableTint="@color/red"
+                    android:drawableTint="@color/green"
                     android:fontFamily="@font/open_sans_extrabold"
                     android:gravity="center"
                     android:padding="4dp"
-                    android:text="Entertainment"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="12sp" />
+                    android:textColor="@color/white" />
             </TableRow>
         </TableLayout>
     </LinearLayout>
