--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -8,6 +8,7 @@
         <item>@font/gelasio_bold</item>
         <item>@font/lilita_one</item>
         <item>@font/michroma</item>
+        <item>@font/open_sans</item>
         <item>@font/open_sans_extrabold</item>
         <item>@font/palanquin_dark</item>
         <item>@font/sawarabi_mincho</item>
